--- a/src/main/java/util/config.properties
+++ b/src/main/java/util/config.properties
@@ -1,8 +1,8 @@
 # mysql connection
-url=jdbc:mysql://localhost:3306/goflow
+url=jdbc:mysql://localhost:8889/goflow
 driverName=com.mysql.cj.jdbc.Driver
 username=root
-password=
+password=root
 
 # query paths
 queryPath=C:\\Users\\User\\Documents\\GitHub\\goflow\\src\\main\\webapp\\WEB-INF\\Query\\Query.xml
