fix: mysql server - sathnindu v2

--- a/src/main/java/util/config.properties
+++ b/src/main/java/util/config.properties
@@ -5,4 +5,4 @@ username=root
 password=root
 
 # query paths
-queryPath=C:\\Users\\User\\Documents\\GitHub\\goflow\\src\\main\\webapp\\WEB-INF\\Query\\Query.xml
+queryPath=../webapps/goflow_Web/WEB-INF/Query/Query.xml
