--- a/src/main/java/util/config.properties
+++ b/src/main/java/util/config.properties
@@ -2,7 +2,7 @@
 url=jdbc:mysql://localhost:3306/goflow
 driverName=com.mysql.cj.jdbc.Driver
 username=root
-password=
+password=1234
 
 # query paths
-queryPath=C:\\Users\\User\\Documents\\GitHub\\goflow\\src\\main\\webapp\\WEB-INF\\Query\\Query.xml
+queryPath=D:\\Gayashaan\\Developments\\goflow\\src\\main\\webapp\\WEB-INF\\Query\\Query.xml
