open id Implemented

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -335,4 +335,21 @@
     <servlet-name>AdminLogin</servlet-name>
     <url-pattern>/AdminLogin</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>GoogleAuth</servlet-name>
+    <servlet-class>controller.auth.GoogleAuth</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GoogleAuth</servlet-name>
+    <url-pattern>/oauth/google</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>GoogleCallback</servlet-name>
+    <servlet-class>controller.auth.GoogleCallback</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GoogleCallback</servlet-name>
+    <url-pattern>/oauth/callback</url-pattern>
+  </servlet-mapping>
+
 </web-app>
