--- a/src/main/java/util/config.properties
+++ b/src/main/java/util/config.properties
@@ -5,4 +5,19 @@ username=root
 password=1234
 
 # query paths
-queryPath=D:\\Gayashaan\\Developments\\goflow\\src\\main\\webapp\\WEB-INF\\Query\\Query.xml
+queryPath=D:\\Personal\\Developments\\goflow\\src\\main\\webapp\\WEB-INF\\Query\\Query.xml
+
+
+# Google OAuth
+oauth.clientId=307379852441-ikqb61v46kbbrc0ef3nnqkn0gfhouflh.apps.googleusercontent.com
+oauth.clientSecret=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
+oauth.redirectUri=http://localhost:8080/goflow/oauth/callback
+
+# Endpoints
+oauth.authzEndpoint=https://accounts.google.com/o/oauth2/v2/auth
+oauth.tokenEndpoint=https://oauth2.googleapis.com/token
+oauth.userInfoEndpoint=https://openidconnect.googleapis.com/v1/userinfo
+oauth.issuer=https://accounts.google.com
+
+# Scopes
+oauth.scope=openid email profile
