--- a/src/main/java/util/config.properties
+++ b/src/main/java/util/config.properties
@@ -9,8 +9,8 @@ queryPath=D:\\Personal\\Developments\\goflow\\src\\main\\webapp\\WEB-INF\\Query\
 
 
 # Google OAuth
-oauth.clientId=307379852441-ikqb61v46kbbrc0ef3nnqkn0gfhouflh.apps.googleusercontent.com
-oauth.clientSecret=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
+oauth.clientId=
+oauth.clientSecret=
 oauth.redirectUri=http://localhost:8080/goflow/oauth/callback
 
 # Endpoints
