Remove IDE/build artifacts and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 # Compiled class file
 *.class
 
+# IDE files
+.idea/
+.project
+*.iml
+
+# Build outputs
+/build/
+/out/
+/target/
+
+
 # Log file
 *.log
 
