--- a/src/main/java/util/config.properties
+++ b/src/main/java/util/config.properties
@@ -5,4 +5,4 @@ username=root
 password=
 
 # query paths
-queryPath=C:\\Users\\User\\Documents\\GitHub\\goflow\\src\\main\\webapp\\WEB-INF\\Query\\Query.xml
+queryPath=D:\\Y4S1\\SE4030. SSD\\goflow_ssd\\goflow\\src\\main\\webapp\\WEB-INF\\Query\\Query.xml
